--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,25 @@ html {
   overflow-x: hidden;
 }
 
+/* Hide default scrollbar but keep functionality */
+html::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 * {
   scroll-snap-align: none;
 }
